--- a/ldms/scripts/ldms_local_rdmatest.sh.in
+++ b/ldms/scripts/ldms_local_rdmatest.sh.in
@@ -69,9 +69,9 @@ XPRT=rdma
 LSXPRT=sock
 
 echo Starting daemons
-ldmsd -x ${XPRT}:$port1 -S $SOCKDIR/metric_socket_1  -l ${LOGDIR}/1.txt
-ldmsd -x ${XPRT}:$port2 -S $SOCKDIR/metric_socket_2  -l ${LOGDIR}/2.txt
-ldmsd -x ${LSXPRT}:$port3 -S $SOCKDIR/metric_socket_3  -l ${LOGDIR}/3.txt
+ldmsd -x ${XPRT}:$port1 -S $SOCKDIR/metric_socket_1  -l ${LOGDIR}/1.txt -r $LDMSD_PIDFILE.1
+ldmsd -x ${XPRT}:$port2 -S $SOCKDIR/metric_socket_2  -l ${LOGDIR}/2.txt -r $LDMSD_PIDFILE.2
+ldmsd -x ${LSXPRT}:$port3 -S $SOCKDIR/metric_socket_3  -l ${LOGDIR}/3.txt -r $LDMSD_PIDFILE.3
 sleep 1
 
 localhost=chama-lsm8-ib0
@@ -132,5 +132,8 @@ ldms_ls -h $localhost -x $XPRT -p $port2 -l
 sleep 1
 echo ldms_ls on host 3:
 ldms_ls -h $lslocalhost -x $LSXPRT -p $port3
-
+for i in 1 2 3; do
+	kill -SIGTERM `cat $LDMSD_PIDFILE.$i`
+done
 echo done;
+echo "logs and data stored under $TESTDIR"
