--- a/ldms/scripts/ldms_local_amqptest.sh.in
+++ b/ldms/scripts/ldms_local_amqptest.sh.in
@@ -138,7 +138,10 @@ sleep 2
 #
 
 sleep 20
-pkill ldms-aggd
-pkill ldmsd
 
+mysleep 1
+for i in 1 2 3; do
+	kill -SIGTERM `cat $LDMSD_PIDFILE.$i`
+done
+echo "logs and data stored under $TESTDIR"
 echo done;
