all: support subproject tarball distribution.
- Create pedigree.am in each of the subprojects that requires it so
  that the file is included in the distributed tar balls.
- SHA.txt and TAG.txt are also created at the subproject level to be
  included in the distributed tar balls.
- OVIS_GITINFO use git information from following sources, ordered by
  precedence:
  - top-level git (verified with Ovis-top.m4)
  - each project's SHA.txt and TAG.txt
  - top-level SHA.txt and TAG.txt
  - NO_GIT

--- a/automake/pedigree.am
+++ b/automake/pedigree.am
@@ -19,3 +19,9 @@ install-exec-local:
 	echo echo "------------------------" >> $(PEDIGREE) ; \
 	echo fi >> $(PEDIGREE); \
 	chmod 555 $(PEDIGREE) ;
+
+SHA.txt:
+	echo "$(OVIS_GIT_LONG)" > SHA.txt
+
+TAG.txt:
+	echo "$(OVIS_GIT_SHORT)" > TAG.txt
