--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -29,6 +29,7 @@ AC_SUBST([LDFLAGS_GETTIME])
 LIBS=""
 
 OPTION_DOC
+OPTION_GITINFO
 
 OPTION_DEFAULT_ENABLE([coll], [ENABLE_COLL])
 OPTION_DEFAULT_ENABLE([ovis_event], [ENABLE_OVIS_EVENT])
