--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -37,4 +37,5 @@ bin_SCRIPTS += ldms_local_sostest.sh
 bin_SCRIPTS += ldms_local_lnet_statstest.sh
 
 bin_SCRIPTS += ldms_plugins_list.sh
+bin_SCRIPTS += ldms-py-edac_test.sh
 endif
