Second draft of ldmsd gender-based init scripts
Works with systemd and sysvinit.

--- a/configure.ac
+++ b/configure.ac
@@ -105,10 +105,20 @@ AC_CONFIG_FILES([Makefile
 util/Makefile
 util/sample_init_scripts/Makefile
 util/sample_init_scripts/genders/Makefile
-util/sample_init_scripts/genders/etc/sysconfig/Makefile
-util/sample_init_scripts/genders/etc/Makefile
+util/sample_init_scripts/genders/man/Makefile
 util/sample_init_scripts/genders/src/Makefile
-util/sample_init_scripts/genders/etc/init.d/Makefile
+util/sample_init_scripts/genders/systemd/Makefile
+util/sample_init_scripts/genders/systemd/etc/Makefile
+util/sample_init_scripts/genders/systemd/etc/sysconfig/Makefile
+util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/Makefile
+util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterGenders/Makefile
+util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterSecrets/Makefile
+util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/plugins-conf/Makefile
+util/sample_init_scripts/genders/systemd/services/Makefile
+util/sample_init_scripts/genders/sysv/Makefile
+util/sample_init_scripts/genders/sysv/etc/Makefile
+util/sample_init_scripts/genders/sysv/etc/init.d/Makefile
+util/sample_init_scripts/genders/examples/Makefile
 packaging/ovis-trinity.spec
 packaging/ovis-rhine.spec
 packaging/ovis-mon7.spec
