Papi - automatically attach and detach to/from application PIDs
Kept the old method of supplying application PIDs in the configuration
Added new method for papi, now papi can run continuously with LDMS daemon
and attach to applications using the application name, the user should
supply a file path to the sampler and put the application name in the
first line of the file. Every time the user need papi to attach to a
different application he/she should change the file content

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -153,7 +153,7 @@ endif
 
 if ENABLE_PAPI
 libspapi_la_SOURCES = papi.c
-libspapi_la_CFLAGS = $(AM_CFLAGS) $(LIBPAPI_INCDIR_FLAG)
+libspapi_la_CFLAGS = $(AM_CFLAGS) $(LIBPAPI_INCDIR_FLAG) $(LIBPAPI_LIBDIR_FLAG)
 libspapi_la_LIBADD = $(COMMON_LIBADD) $(JOBID_LIBFLAGS) -lpapi -lm
 pkglib_LTLIBRARIES += libspapi.la
 endif
