sampler for demoing/testing all metric types and store formatting.

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -93,6 +93,10 @@ if ENABLE_ARRAY_EXAMPLE
 libarray_example_la_SOURCES = array_example.c
 libarray_example_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += libarray_example.la
+
+liball_example_la_SOURCES = all_example.c
+liball_example_la_LIBADD = $(COMMON_LIBADD)
+pkglib_LTLIBRARIES += liball_example.la
 endif
 
 if ENABLE_KNC_SAMPLER
