notification files and test.

--- a/lib/src/ovis_util/Makefile.am
+++ b/lib/src/ovis_util/Makefile.am
@@ -8,6 +8,7 @@ libovis_utilinclude_HEADERS = util.h dstring.h big_dstring.h os_util.h olog.h
 libovis_utilincludedir = $(includedir)/ovis_util
 libovis_util_conf = /etc/ld.so.conf.d/libovis_util.conf
 lib_LTLIBRARIES += libovis_util.la
+OVIS_UTIL_LDFLAGS = -lovis_util -lpthread @LDFLAGS_GETTIME@
 
 bin_PROGRAMS = test_big_dstring test_dstring test_olog
 
@@ -16,12 +17,17 @@ bin_PROGRAMS = test_big_dstring test_dstring test_olog
 #test_rman_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
 #test_rman_DEPENDENCIES = libovis_util.la
 test_dstring_SOURCES= test_dstring.c 
-test_dstring_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
+test_dstring_LDFLAGS = $(OVIS_UTIL_LDFLAGS)
 test_dstring_DEPENDENCIES = libovis_util.la
 test_big_dstring_SOURCES=test_big_dstring.c big_dstring.h 
-test_big_dstring_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
+test_big_dstring_LDFLAGS = $(OVIS_UTIL_LDFLAGS)
 test_big_dstring_DEPENDENCIES = libovis_util.la
 test_olog_SOURCES= test_olog.c 
-test_olog_LDFLAGS = -lovis_util @LDFLAGS_GETTIME@
+test_olog_LDFLAGS = $(OVIS_UTIL_LDFLAGS)
 test_olog_DEPENDENCIES = libovis_util.la
+test_notification_SOURCES= test_notification.c 
+libovis_util_la_SOURCES += notification.h notification.c
+test_notification_LDFLAGS = $(OVIS_UTIL_LDFLAGS)
+test_notification_DEPENDENCIES = libovis_util.la
+bin_PROGRAMS += test_notification
 endif
