lib,ovis_util: Fix build problem for notification library
Change-Id: I4fb10a964da7ed42fa562e890f0f1edfb219f3f7

--- a/lib/src/ovis_util/Makefile.am
+++ b/lib/src/ovis_util/Makefile.am
@@ -4,6 +4,8 @@ AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)
 
 if ENABLE_OVIS_UTIL
 libovis_util_la_SOURCES = util.c util.h dstring.h dstring.c olog.c olog.h
+libovis_util_la_SOURCES += notification.h notification.c
+libovis_util_la_LIBADD = -lpthread -lrt
 libovis_utilinclude_HEADERS = util.h dstring.h big_dstring.h os_util.h olog.h
 libovis_utilincludedir = $(includedir)/ovis_util
 libovis_util_conf = /etc/ld.so.conf.d/libovis_util.conf
@@ -30,7 +32,6 @@ test_olog_SOURCES= test_olog.c
 test_olog_LDFLAGS = $(LDFLAGS_OVIS_UTIL)
 test_olog_DEPENDENCIES = libovis_util.la
 test_notification_SOURCES= test_notification.c
-libovis_util_la_SOURCES += notification.h notification.c
 test_notification_LDFLAGS = $(LDFLAGS_OVIS_UTIL)
 test_notification_DEPENDENCIES = libovis_util.la
 bin_PROGRAMS += test_notification
