add syslog support.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -435,6 +435,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms_plugins_list.sh
 		 scripts/ldms-py-edac_test.sh
 		 scripts/ldms-py-subset_test.sh
+		 scripts/ldms-py-syslog.sh
 )
 
 AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
