sampler to drive testing of store handling.
provokes generation number change periodically.
build/install and then run bin/ldms-py-varset.sh
to see valgrind error/exit at:

 Invalid write of size 8
    at 0x548B6EC: __ldms_free_rbd (ldms_xprt.c:2866)
    by 0x5487D0E: ldms_set_delete (ldms.c:456)
    by 0xCB65185: sample (variable.c:298)
    by 0x4064A3: plugin_sampler_cb (ldmsd.c:652)
    by 0x4E43A13: event_base_loop (in /usr/lib64/libevent-2.0.so.5.1.9)
    by 0x405570: event_proc (ldmsd.c:1026)
    by 0x64C5DC4: start_thread (in /usr/lib64/libpthread-2.17.so)
    by 0x702C73C: clone (in /usr/lib64/libc-2.17.so)
  Address 0x0 is not stack'd, malloc'd or (recently) free'd

--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -14,4 +14,5 @@ bin_SCRIPTS += ldms-py-edac_test.sh
 bin_SCRIPTS += ldms-py-subset_test.sh
 bin_SCRIPTS += ldms-py-syslog.sh
 bin_SCRIPTS += ldms-meminfo.sh
+bin_SCRIPTS += ldms-py-varset.sh
 endif
