refactor tests to avoid configure listing.
The new tests consist of script pieces and a common driver.
The driver ldms-static-test.sh has a man page (ldms-static-test) and can be
used with externally supplied script piece sets also.

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -2,6 +2,7 @@
 dist_man8_MANS= \
 ldms_build_install.man \
 ldms_ls.man \
+ldms-static-test.man \
 ldmsd.man \
 ldms-plugins.man \
 ldmsd_exits.man \
