--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -1,14 +1,16 @@
 
 # consider adding ldmsd to bin_SCRIPTS if ldmsd script ever stabilizes
-EXTRA_DIST=@OVIS_EXTRA_DIST@
+EXTRA_DIST=@OVIS_EXTRA_DIST@ examples
 
 if ENABLE_SCRIPTS
 bin_SCRIPTS= envldms.sh
+bin_SCRIPTS += ldms-static-test.sh
 
 DISTCLEANFILES = $(bin_SCRIPTS)
+OPV=-$(PACKAGE_VERSION)
 
-bin_SCRIPTS+= ldms_ban.sh
-bin_SCRIPTS+=  ldms-py-fptrans_test.sh
+bin_SCRIPTS += ldms_ban.sh
+bin_SCRIPTS += ldms-py-fptrans_test.sh
 bin_SCRIPTS += ldms-plugins.sh
 bin_SCRIPTS += ldms-py-edac_test.sh
 bin_SCRIPTS += ldms-py-subset_test.sh
@@ -18,4 +20,25 @@ bin_SCRIPTS += ldms-py-varset.sh
 bin_SCRIPTS += ldms-py-rename.sh
 bin_SCRIPTS += ldms_local_opa2test.sh
 
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/examples/static-test && \
+	uf=$(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms && \
+	touch $$uf && \
+	for f in $(srcdir)/examples/* ; do \
+		if test "$$f" = "$(srcdir)/examples/README"; then \
+			continue; \
+		fi; \
+		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/examples/static-test; \
+		echo $$(basename $$f) >> $$uf; \
+	done
+	$(INSTALL_DATA) $(srcdir)/examples/.canned $(DESTDIR)$(docdir)$(OPV)/examples/static-test
+
+uninstall-local:
+	echo removing files:
+	while read f; do \
+		echo $$f; \
+		$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/$$f; \
+	done < $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms
+	$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.canned
+	$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms
 endif
