ldmsd: Refactor ldmsctl to use the message boundary

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -40,7 +40,7 @@ endif
 ldmsd_LDFLAGS += @OVIS_AUTH_LIBS@
 ldms_ls_LDADD += @OVIS_AUTH_LIBS@
 
-ldmsctl_SOURCES = ldmsctl.c
+ldmsctl_SOURCES = ldmsctl.c ldmsd_request_util.c
 ldmsctl_LDADD = $(CORE)/libldms.la @OVIS_AUTH_LIBS@
 ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lzap  @LDFLAGS_GETTIME@
 
