--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -412,6 +412,7 @@ OVIS_EXEC_SCRIPTS(
 		 scripts/ldms-py-subset_test.sh
 		 scripts/ldms-py-varset.sh
 		 scripts/ldms-py-syslog.sh
+		 scripts/ldms-py-rename.sh
 		 scripts/ldms-meminfo.sh
 )
 
