ldmsd: Enable ldmsctl to remotely configure an ldmsd using ldms transport

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -42,7 +42,9 @@ ldms_ls_LDADD += @OVIS_AUTH_LIBS@
 
 ldmsctl_SOURCES = ldmsctl.c ldmsd_request_util.c
 ldmsctl_LDADD = $(CORE)/libldms.la @OVIS_AUTH_LIBS@
-ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ -lovis_ctrl -lovis_util -lmmalloc -lcoll -lzap  @LDFLAGS_GETTIME@
+ldmsctl_LDFLAGS = $(AM_LDFLAGS) @LDFLAGS_READLINE@ \
+		-lovis_ctrl -lovis_util -lmmalloc -lcoll -lzap -pthread \
+		 @LDFLAGS_GETTIME@
 
 ldmsd_sos_init_SOURCES = ldmsd_sos_init.c
 ldmsd_sos_init_CFLAGS = @SOS_INCDIR_FLAG@ $(AM_CFLAGS)
