--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.poseidon.local.conf
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldmsd.poseidon.local.conf
@@ -31,11 +31,11 @@ host="$( echo $hostfull | cut -d "." -f1 )"
 LDMS_HOSTNAME=$host
 LDMSCLUSTER=$host
 
-# In the absence of cluster genders one of NODE_ID_BASE  COMPONENT_ID
+# In the absence of cluster genders one of LDMSD_IDBASE  COMPONENT_ID
 # must be set
-# NODE_ID_BASE is for cluster environments where nodes have numeric
+# LDMSD_IDBASE is for cluster environments where nodes have numeric
 # suffix in their names and no ldmsd_idbase gender is defined.
-# NODE_ID_BASE=1
+# LDMSD_IDBASE=1
 # COMPONENT_ID is for stand-alone data collector hosts. It must be >= 1.
 COMPONENT_ID=1
 
