flatfile store partial update and docs.

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -22,6 +22,7 @@ Plugin_procinterrupts.man \
 Plugin_procnetdev.man \
 Plugin_procnfs.man \
 Plugin_store_csv.man \
+Plugin_store_flatfile.man \
 Plugin_store_sos.man \
 Plugin_vmstat.man
 
